--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
-  "name": "nfly-monit",
+  "name": "nfly",
   "version": "0.1.0",
+  "description": "nfly",
   "private": true,
   "scripts": {
     "start": "node app"
   },
   "dependencies": {
+    "co": "^4.5.1",
+    "koa": "^0.18.1",
+    "koa-logger": "^1.2.2",
+    "koa-router": "^4.3.1",
+    "koa-static": "^1.4.9",
+    "lodash": "^3.6.0",
+    "log4js": "^0.6.22",
+    "socket.io": "^1.3.5"
   }
 }
