--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "co": "^4.5.1",
     "koa": "^0.18.1",
+    "koa-ejs": "^1.1.3",
     "koa-logger": "^1.2.2",
     "koa-router": "^4.3.1",
     "koa-static": "^1.4.9",
