--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-static": "^1.4.9",
     "lodash": "^3.6.0",
     "log4js": "^0.6.22",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "term.js": "0.0.4"
   }
 }
