--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "log4js": "^0.6.22",
     "pty.js": "^0.2.7-1",
     "socket.io": "^1.3.5",
+    "json-socket": "^0.1.2",
     "term.js": "0.0.4"
   }
 }
