--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "koa-static": "^1.4.9",
     "lodash": "^3.6.0",
     "log4js": "^0.6.22",
+    "protobuf": "^0.11.0",
+    "protobufjs": "^4.0.0-b2",
     "pty.js": "^0.2.7-1",
     "socket.io": "^1.3.5",
     "term.js": "0.0.4"
