--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "nfly",
+  "name": "rshell-monit",
   "version": "0.1.0",
-  "description": "nfly",
+  "description": "Remote shell consoles monit build with nodejs",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node index"
   },
   "dependencies": {
-    "co": "^4.5.1",
-    "koa": "^0.18.1",
-    "koa-ejs": "^1.1.3",
-    "koa-gzip": "^0.1.0",
-    "koa-logger": "^1.2.2",
-    "koa-router": "^4.3.1",
-    "koa-static": "^1.4.9",
-    "lodash": "^3.6.0",
-    "log4js": "^0.6.22",
-    "protobufjs": "^4.0.0-b2",
-    "pty.js": "^0.2.7-1",
-    "socket.io": "^1.3.5",
+    "co": "4.5.1",
+    "koa": "0.18.1",
+    "koa-ejs": "1.1.3",
+    "koa-gzip": "0.1.0",
+    "koa-logger": "1.2.2",
+    "koa-router": "4.3.1",
+    "koa-static": "1.4.9",
+    "lodash": "3.6.0",
+    "log4js": "0.6.22",
+    "protobufjs": "4.0.0-b2",
+    "pty.js": "0.2.7-1",
+    "socket.io": "1.3.5",
     "term.js": "0.0.4"
   }
 }
