--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "co": "4.5.1",
+    "colors": "^1.0.3",
     "koa": "0.18.1",
     "koa-ejs": "1.1.3",
     "koa-gzip": "0.1.0",
