--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "rshell-monit",
+  "name": "wts-monit",
   "version": "0.1.0",
-  "description": "Web terminal shell monit build with Node.js",
-  "private": true,
-  "scripts": {
-    "start": "node --harmony index"
+  "description": "Send commands to remote terminal and then show result on the web console.",
+  "engine": {
+    "node": ">= 0.12.0"
+  },
+  "scripts": {},
+  "main": "./index",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chemdemo/wts-monit.git"
   },
   "dependencies": {
     "co": "4.5.1",
@@ -21,5 +26,17 @@
     "pty.js": "0.2.7-1",
     "socket.io": "1.3.5",
     "term.js": "0.0.4"
-  }
+  },
+  "keywords": [
+    "wts", "wts-monit", "term", "console"
+  ],
+  "author": "dm.yang<yangdemo@gmail.com>",
+  "maintainers": [
+    {
+      "name": "dm.yang",
+      "email": "yangdemo@gmail.com",
+      "web": "https://www.github.com/chemdemo"
+    }
+  ],
+  "license": "MIT"
 }
